--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -1,11 +1,11 @@
 // Colours
 $primary: #FFDD4F;
 $secondary: #F0A01F;
+$white: #ffffff;
 $light: #f2f2f2;
 $grey: #b3b3b3;
 $dark: #434343;
 $black: #000000;
-$white: #ffffff;
 
 $caution: #FFDD4F;
 $danger: #EB5454;
@@ -15,12 +15,17 @@ $success: #7FAC59;
 $slab: "museo-slab", serif;
 $sans: "akagi-pro", sans-serif;
 $smallfont: 0.85em;
+$largefont: 1.25em;
+$lineheight: 1.6em;
+
+$borderradius: 4px;
 
 @import "compass/css3";
 @import 'reset';
 @import 'global';
-@import 'forms';
 @import 'header';
+@import 'home';
+@import 'forms';
 @import 'footer';
 @import 'modelviewer';
 @import 'print';
